--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/michael-lawrence/tekken-font#readme",
   "devDependencies": {
-    "icon-font-buildr": "^1.3.3"
+    "icon-font-buildr": "^1.3.3",
+    "text-to-svg": "^3.1.5"
   },
   "dependencies": {}
 }
